--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Train Scheduler</title>
 </head>
 <body>
-    <script src="assets/javascript/app.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="jumbotron jumbotron-fluid text-center text-white bg-primary rounded py-3">
+                    <h1 class="display-3"><strong><em>Train Time</em></strong></h1>
+                </div>
+            </div>
+        </div>
+        <!-- using a card because tables don't default to full width -->
+        <div class="row">
+            <div class="col-12">
+                <div class="bg-primary text-white rounded-top pl-3">Schedule</div>
+                <table class="table text-center" id="list-of-trains">
+                    <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Destination</th>
+                            <th scope="col">Frequency (minutes)</th>
+                            <th scope="col">Next Arrival</th>
+                            <th scope="col">Minutes Away</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Pittsburg - Bay Point</th>
+                            <td>Bay Point</td>
+                            <td>20</td>
+                            <td>10:30 PM</td>
+                            <td>7</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">SFO Airport</th>
+                            <td>SFO</td>
+                            <td>20</td>
+                            <td>10:30 PM</td>
+                            <td>7</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Civic Center</th>
+                            <td>Civic Center</td>
+                            <td>20</td>
+                            <td>10:30 PM</td>
+                            <td>7</td>
+                        </tr>
+                    </tbody>
+                </table>                
+            </div>
+        </div>
+
+        <form class="border rounded p-1">
+        <div class="bg-primary text-white border rounded px-3 mb-2">Add a train.</div>
+        <div class="form-group">
+            <input class="form-control" type="text" placeholder="Train Name" id="train-name" >
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="text" placeholder="Destination" id="train-destination" >
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="number" placeholder="Frequency (minutes)" id="train-frequency" >
+        </div>
+        <div class="form-group">
+            <input class="form-control" type="time" placeholder="First arrival time" id="train-first-arrival" >
+        </div>
+        
+        <button class="btn btn-primary" id="add-train">Add Train</button>
+        </form>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="assets/javascript/trainschedule.js"></script>
 </body>
 </html>
