Added time display, calculation is incorrect somewhere though.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="jumbotron jumbotron-fluid text-center text-white bg-primary rounded py-3">
-                    <h1 class="display-3"><strong><em>Train Time</em></strong></h1>
+                    <h1 class="display-3" id="header"><strong><em>Train Time</em></strong></h1>
                 </div>
             </div>
         </div>
